-- SQL dump generated using DBML (dbml.dbdiagram.io)
-- Database: PostgreSQL
-- Generated at: 2026-05-26T19:09:42.593Z

CREATE TABLE "conversations" (
  "id" "String" PRIMARY KEY,
  "user_id" "String" NOT NULL,
  "title" "String",
  "updated_at" "DateTime" DEFAULT (now()),
  "created_at" "DateTime" DEFAULT (now()),
  "is_archived" Boolean
);

CREATE TABLE "missing_knowledge_logs" (
  "id" "String" PRIMARY KEY,
  "thread_id" "String" NOT NULL,
  "query" "String" NOT NULL,
  "created_at" "DateTime" DEFAULT (now())
);

CREATE TABLE "refresh_tokens" (
  "id" "String" PRIMARY KEY,
  "token" "String" UNIQUE NOT NULL,
  "user_id" "String" NOT NULL,
  "is_revoked" Boolean NOT NULL DEFAULT false,
  "expires_at" "DateTime" NOT NULL,
  "created_at" "DateTime" NOT NULL DEFAULT (now()),
  "revoked_at" "DateTime",
  "user_agent" "String",
  "ip_address" "String"
);

CREATE TABLE "resource_ownerships" (
  "id" "String" PRIMARY KEY,
  "resource_type" "String" NOT NULL,
  "resource_id" "String" NOT NULL,
  "owner_id" "String" NOT NULL,
  "created_at" "DateTime" NOT NULL
);

CREATE TABLE "roles" (
  "id" "String" PRIMARY KEY,
  "name" "String" UNIQUE NOT NULL,
  "description" "String",
  "created_at" "DateTime" NOT NULL
);

CREATE TABLE "user_roles" (
  "user_id" "String" NOT NULL,
  "role_id" "String" NOT NULL,
  PRIMARY KEY ("user_id", "role_id")
);

CREATE TABLE "users" (
  "id" "String" PRIMARY KEY,
  "email" "String" UNIQUE NOT NULL,
  "hashed_password" "String",
  "is_active" Boolean NOT NULL,
  "is_superuser" Boolean NOT NULL,
  "created_at" "DateTime" NOT NULL,
  "updated_at" "DateTime" NOT NULL,
  "auth_provider" "String" NOT NULL DEFAULT 'local',
  "google_id" "String" UNIQUE,
  "avatar_url" "String",
  "display_name" "String"
);

CREATE TABLE "dashboard_answer_ratings" (
  "id" "String" PRIMARY KEY,
  "user_id" "String" NOT NULL,
  "run_id" "String" NOT NULL,
  "rating" "String" NOT NULL,
  "comment" "String",
  "thread_id" "String" NOT NULL,
  "agent_id" "String",
  "created_at" "DateTime" NOT NULL,
  "updated_at" "DateTime" NOT NULL
);

CREATE TABLE "dashboard_pinned_posts" (
  "id" "String" PRIMARY KEY,
  "display_order" Int UNIQUE NOT NULL,
  "title" "String" NOT NULL,
  "ref_id" "String" UNIQUE NOT NULL,
  "category" "String" NOT NULL,
  "pinned_date" "DateTime" NOT NULL,
  "summary" "String" NOT NULL,
  "source_url" "String" NOT NULL,
  "document_type" "String" NOT NULL,
  "created_by" "String" NOT NULL,
  "created_at" "DateTime" NOT NULL,
  "updated_at" "DateTime" NOT NULL
);

CREATE TABLE "dashboard_pinned_post_tags" (
  "post_id" "String" NOT NULL,
  "tag_id" Int NOT NULL,
  PRIMARY KEY ("post_id", "tag_id")
);

CREATE TABLE "dashboard_topic_assignments" (
  "id" "String" PRIMARY KEY,
  "result_id" "String" NOT NULL,
  "question" "String" NOT NULL,
  "topic_id" Int NOT NULL,
  "label" "String",
  "source" "String" NOT NULL,
  "original_created_at" "DateTime",
  "created_at" "DateTime" NOT NULL
);

CREATE TABLE "dashboard_topic_pipeline_jobs" (
  "id" "String" PRIMARY KEY,
  "time_range" "String" NOT NULL,
  "status" "String" NOT NULL DEFAULT 'pending',
  "stage" "String" NOT NULL DEFAULT 'pending',
  "progress" Int NOT NULL DEFAULT 0,
  "message" "String",
  "error_detail" "String",
  "created_at" "DateTime" NOT NULL,
  "updated_at" "DateTime" NOT NULL,
  "completed_at" "DateTime"
);

CREATE TABLE "dashboard_topic_results" (
  "id" "String" PRIMARY KEY,
  "job_id" "String" NOT NULL,
  "topic_type" "String" NOT NULL,
  "n_topics" Int NOT NULL,
  "n_documents" Int NOT NULL,
  "topic_summary" Json NOT NULL,
  "topic_sentiment" Json NOT NULL DEFAULT '{}',
  "topic_marked" Json NOT NULL DEFAULT '{}',
  "created_at" "DateTime" NOT NULL
);

CREATE TABLE "dashboard_topic_keywords" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "result_id" "String" NOT NULL,
  "keyword" "String" NOT NULL
);

CREATE TABLE "chunks" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "document_id" Int NOT NULL,
  "chunk_index" Int NOT NULL,
  "content" "String" NOT NULL,
  "embedding_id" "String" NOT NULL,
  "chunk_metadata" Json,
  "created_at" "DateTime" NOT NULL DEFAULT (now()),
  "updated_at" "DateTime" NOT NULL DEFAULT (now())
);

CREATE TABLE "document_storages" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" "String" NOT NULL,
  "description" "String",
  "config" Json,
  "created_at" "DateTime" NOT NULL DEFAULT (now()),
  "updated_at" "DateTime" NOT NULL DEFAULT (now())
);

CREATE TABLE "document_tags" (
  "document_id" Int NOT NULL,
  "tag_id" Int NOT NULL,
  PRIMARY KEY ("document_id", "tag_id")
);

CREATE TABLE "documents" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "storage_id" Int NOT NULL,
  "title" "String" NOT NULL,
  "status" "String" NOT NULL,
  "document_type" "String" NOT NULL,
  "file_path" "String" NOT NULL,
  "file_size" Int NOT NULL,
  "checksum" "String" NOT NULL,
  "processing_status" "String" NOT NULL,
  "processing_error" "String",
  "processing_started_at" "DateTime",
  "processing_completed_at" "DateTime",
  "deletion_error" "String",
  "deletion_started_at" "DateTime",
  "deletion_completed_at" "DateTime",
  "meta_data" Json,
  "created_at" "DateTime" NOT NULL DEFAULT (now()),
  "updated_at" "DateTime" NOT NULL DEFAULT (now())
);

CREATE TABLE "faq_question_variants" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "faq_id" Int NOT NULL,
  "question" "String" NOT NULL,
  "embedding_id" "String" NOT NULL
);

CREATE TABLE "faqs" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "source" "String" NOT NULL,
  "document_id" Int,
  "answer" "String" NOT NULL,
  "meta_data" Json,
  "created_at" "DateTime" NOT NULL DEFAULT (now()),
  "updated_at" "DateTime" NOT NULL DEFAULT (now())
);

CREATE TABLE "formal_documents" (
  "document_id" Int PRIMARY KEY,
  "lightrag_track_id" "String",
  "lightrag_doc_id" "String",
  "sync_status" "String" NOT NULL,
  "sync_error" "String",
  "last_synced_at" "DateTime",
  "created_at" "DateTime" NOT NULL DEFAULT (now()),
  "updated_at" "DateTime" NOT NULL DEFAULT (now())
);

CREATE TABLE "tags" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" "String" NOT NULL,
  "slug" "String" UNIQUE NOT NULL,
  "created_at" "DateTime" NOT NULL DEFAULT (now()),
  "updated_at" "DateTime" NOT NULL DEFAULT (now())
);

CREATE TABLE "wayfinder_alias" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "node_id" Int NOT NULL,
  "name" "String" NOT NULL
);

CREATE TABLE "wayfinder_building" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" "String" NOT NULL,
  "description" "String",
  "real_image_url" "String"
);

CREATE TABLE "wayfinder_edge" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "start_node_id" Int NOT NULL,
  "end_node_id" Int NOT NULL,
  "type" "String" NOT NULL,
  "weight" Float NOT NULL,
  "bidirectional" Boolean NOT NULL,
  "polyline" Json
);

CREATE TABLE "wayfinder_event" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" "String" NOT NULL,
  "description" "String",
  "start_date" Date NOT NULL,
  "end_date" Date,
  "start_time" Time,
  "end_time" Time,
  "location_name" "String",
  "node_id" Int,
  "organizer" "String",
  "category" "String",
  "is_active" Boolean NOT NULL,
  "created_at" "DateTime"
);

CREATE TABLE "wayfinder_map" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" "String" NOT NULL,
  "image_url" "String" NOT NULL,
  "floor_level" Int,
  "scale_ratio" Float NOT NULL,
  "building_id" Int
);

CREATE TABLE "wayfinder_missing_location" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" "String" NOT NULL,
  "building_name" "String",
  "floor_level" Int,
  "description" "String",
  "requested_by" "String",
  "status" "String" NOT NULL,
  "resolved_node_id" Int,
  "resolved_at" "String",
  "resolved_by" "String",
  "admin_note" "String",
  "created_at" "DateTime"
);

CREATE TABLE "wayfinder_missing_route" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "start_node_id" Int,
  "start_name" "String" NOT NULL,
  "start_building" "String",
  "start_floor" Int,
  "end_node_id" Int,
  "end_name" "String" NOT NULL,
  "end_building" "String",
  "end_floor" Int,
  "reason" "String",
  "status" "String" NOT NULL,
  "resolved_note" "String",
  "resolved_at" "String",
  "resolved_by" "String",
  "reported_by" "String",
  "created_at" "DateTime"
);

CREATE TABLE "wayfinder_node" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" "String" NOT NULL,
  "x" Float NOT NULL,
  "y" Float NOT NULL,
  "description" "String",
  "real_image_url" "String",
  "type" "String" NOT NULL,
  "map_id" Int NOT NULL
);

CREATE UNIQUE INDEX ON "dashboard_answer_ratings" ("user_id", "run_id");

CREATE UNIQUE INDEX ON "dashboard_topic_keywords" ("result_id", "keyword");

CREATE UNIQUE INDEX ON "chunks" ("document_id", "chunk_index");

COMMENT ON TABLE "dashboard_answer_ratings" IS 'This table contains check constraints and requires additional setup for migrations. Visit https://pris.ly/d/check-constraints for more info.';

COMMENT ON TABLE "dashboard_topic_pipeline_jobs" IS 'This table contains check constraints and requires additional setup for migrations. Visit https://pris.ly/d/check-constraints for more info.';

COMMENT ON TABLE "faqs" IS 'This table contains check constraints and requires additional setup for migrations. Visit https://pris.ly/d/check-constraints for more info.';

ALTER TABLE "dashboard_pinned_post_tags" ADD FOREIGN KEY ("post_id") REFERENCES "dashboard_pinned_posts" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "dashboard_pinned_post_tags" ADD FOREIGN KEY ("tag_id") REFERENCES "tags" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "dashboard_topic_keywords" ADD FOREIGN KEY ("result_id") REFERENCES "dashboard_topic_results" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "refresh_tokens" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "resource_ownerships" ADD FOREIGN KEY ("owner_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "user_roles" ADD FOREIGN KEY ("role_id") REFERENCES "roles" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "user_roles" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "dashboard_topic_assignments" ADD FOREIGN KEY ("result_id") REFERENCES "dashboard_topic_results" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "dashboard_topic_results" ADD FOREIGN KEY ("job_id") REFERENCES "dashboard_topic_pipeline_jobs" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "chunks" ADD FOREIGN KEY ("document_id") REFERENCES "documents" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "document_tags" ADD FOREIGN KEY ("document_id") REFERENCES "documents" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "document_tags" ADD FOREIGN KEY ("tag_id") REFERENCES "tags" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "documents" ADD FOREIGN KEY ("storage_id") REFERENCES "document_storages" ("id") ON DELETE NO ACTION DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "faq_question_variants" ADD FOREIGN KEY ("faq_id") REFERENCES "faqs" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "faqs" ADD FOREIGN KEY ("document_id") REFERENCES "documents" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "documents" ADD FOREIGN KEY ("id") REFERENCES "formal_documents" ("document_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "wayfinder_alias" ADD FOREIGN KEY ("node_id") REFERENCES "wayfinder_node" ("id") ON DELETE NO ACTION DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "wayfinder_edge" ADD FOREIGN KEY ("end_node_id") REFERENCES "wayfinder_node" ("id") ON DELETE NO ACTION DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "wayfinder_edge" ADD FOREIGN KEY ("start_node_id") REFERENCES "wayfinder_node" ("id") ON DELETE NO ACTION DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "wayfinder_event" ADD FOREIGN KEY ("node_id") REFERENCES "wayfinder_node" ("id") ON DELETE NO ACTION DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "wayfinder_map" ADD FOREIGN KEY ("building_id") REFERENCES "wayfinder_building" ("id") ON DELETE NO ACTION DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "wayfinder_node" ADD FOREIGN KEY ("map_id") REFERENCES "wayfinder_map" ("id") ON DELETE NO ACTION DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "missing_knowledge_logs" ADD FOREIGN KEY ("thread_id") REFERENCES "conversations" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "dashboard_answer_ratings" ADD FOREIGN KEY ("thread_id") REFERENCES "conversations" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "dashboard_answer_ratings" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "dashboard_pinned_posts" ADD FOREIGN KEY ("created_by") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "wayfinder_missing_location" ADD FOREIGN KEY ("resolved_node_id") REFERENCES "wayfinder_node" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "conversations" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "wayfinder_missing_route" ADD FOREIGN KEY ("start_node_id") REFERENCES "wayfinder_node" ("id") ON DELETE SET NULL DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "wayfinder_missing_route" ADD FOREIGN KEY ("end_node_id") REFERENCES "wayfinder_node" ("id") ON DELETE SET NULL DEFERRABLE INITIALLY IMMEDIATE;
